# ferrolex

./: Cargo.toml  README.md
.github/workflows/: ci.yml
crates/ferrolex/: Cargo.toml  README.md
crates/ferrolex-brand/: Cargo.toml
crates/ferrolex-brand/src/: lib.rs
crates/ferrolex-core/: Cargo.toml
crates/ferrolex-core/src/: lib.rs
crates/ferrolex-dict/: Cargo.toml
crates/ferrolex-dict/src/: lib.rs
crates/ferrolex-hunspell/: Cargo.toml
crates/ferrolex-hunspell/src/: lib.rs
crates/ferrolex-json/: Cargo.toml
crates/ferrolex-json/src/: lib.rs
crates/ferrolex-oxc/: Cargo.toml
crates/ferrolex-oxc/src/: lib.rs
crates/ferrolex-tokenizer/: Cargo.toml
crates/ferrolex-tokenizer/src/: lib.rs
crates/ferrolex/src/: lib.rs
docs/: architecture.md  brand-validation.md  dictionaries.md  roadmap.md
docs/adr/: 0001-hunspell-import-own-runtime-format.md  0002-lexios-as-brand-source.md  0003-rust-only-first.md  0004-no-tree-sitter-in-v0-1.md
