[workspace]
members = [
    "crates/ferrolex",
    "crates/ferrolex-core",
    "crates/ferrolex-tokenizer",
    "crates/ferrolex-dict",
    "crates/ferrolex-hunspell",
    "crates/ferrolex-brand",
    "crates/ferrolex-json",
    "crates/ferrolex-oxc",
]
resolver = "2"

[workspace.package]
edition = "2024"
homepage = "https://github.com/sebastian-software/ferrolex"
license = "MIT"
repository = "https://github.com/sebastian-software/ferrolex"
rust-version = "1.88"
version = "0.1.0"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
needless_borrow = "deny"
redundant_clone = "deny"
