[package]
name = "ferrolex-brand"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Lexios-powered brand validation runtime for Ferrolex."
documentation = "https://docs.rs/ferrolex-brand"
keywords = ["brand", "lexios", "spellcheck", "terminology"]
categories = ["text-processing", "development-tools"]

[lib]
path = "src/lib.rs"

[dependencies]
ferrolex-core = { version = "0.1.0", path = "../ferrolex-core" }

[lints]
workspace = true
