[package]
name = "ferrolex-dict"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Dictionary model and runtime lookup APIs for Ferrolex."
documentation = "https://docs.rs/ferrolex-dict"
keywords = ["spellcheck", "dictionary", "hunspell", "wordlist"]
categories = ["internationalization", "text-processing"]

[lib]
path = "src/lib.rs"

[dependencies]
ferrolex-core = { version = "0.1.0", path = "../ferrolex-core" }

[lints]
workspace = true
